--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         width: 100%;
         height: 2rem;
         object-fit: cover;
-        background: #000;
+        background: #fff;
     }
 
     .DAH{
@@ -108,7 +108,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(222, 222, 222, 0.898);
+      color: rgba(71, 71, 71, 0.957);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -120,7 +120,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: #fff;
+      color: #000;
     }
 
     .Calculator{
@@ -130,7 +130,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(222, 222, 222, 0.898);
+      color: rgba(71, 71, 71, 0.957);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -142,7 +142,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: #fff;
+      color: #000;
     }
     
     .dico{
@@ -152,7 +152,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(222, 222, 222, 0.898);
+      color: rgba(71, 71, 71, 0.957);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif; 
@@ -164,7 +164,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: #fff;
+      color: #000;
     }
 
     .datime{
@@ -174,7 +174,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(222, 222, 222, 0.898);
+      color: rgba(71, 71, 71, 0.957);
       padding: 10px;
       font-family: Verdana; 
       font-size: 13.5px;
@@ -185,18 +185,17 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: #fff;
+      color: #000;
     }
     
     .navbar{
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #fff;
+                background: #000;
                  width: 100%;
                  height: 63px;
                  object-fit: cover;
-                 border-bottom: 0.01rem solid #05acff71;
                  box-shadow: 0 -4.5px 2rem 4px #10affe2c;
                  position: sticky;
                  top: 0;
@@ -212,21 +211,19 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: #4f4f4fe6;
+            color: #a0a0a0f7;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 17px;
             word-spacing: -1px;
             height: 45px;    
-            border: 0.11rem solid transparent;
 }
 
 .TYK1:hover{
   color: red;
     transition: 0.35s linear;
-    border: 0.11rem solid rgba(169, 169, 169, 0.925);
     border-radius: 0.5rem;
-    background-color: #f6f6f6;
+    background-color: #fdfdfd;
 }
 
 .navbar0{
@@ -238,7 +235,7 @@
             width: 100%; 
             height: 110px; 
             background: transparent;
-            box-shadow: 0 -5px 2.6rem 4px #10affe32;
+            box-shadow: 0 -5px 2rem 4px #10affe32;
           }
 
           .BIENVENUE{
@@ -288,7 +285,7 @@
           font-family: 'Tektur', cursive;
           font-family: 'Titillium Web', sans-serif;
           cursor: pointer;
-          border-top: 0.49rem solid #000;
+          border-top: 0.49rem solid #ededed;
           border-right: 0.15rem solid rgba(92, 170, 248, 0.097);
           border-left: 0.15rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
@@ -300,7 +297,7 @@
 
          .tikinyiki:hover{
           transform: rotate(360deg);
-          background: -webkit-linear-gradient(#717171,#000000fc);
+          background: -webkit-linear-gradient(#838383,#2b2b2bfc);
           transition: 0.3s ease-out;
           border-right: 0.15rem solid transparent;
           border-left: 0.15rem solid transparent;
@@ -320,19 +317,17 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: #4f4f4fe6;
+            color: #a0a0a0f7;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
             height: 45px;
-            border: 0.11rem solid transparent;
           }
 
           .myDiv:hover{
     color: red;
     transition: 0.35s linear;
-    border: 0.11rem solid rgba(169, 169, 169, 0.925);
     border-radius: 0.5rem;
     background-color: #f6f6f6;
           }
@@ -346,18 +341,16 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: #4f4f4fe6;
+            color: #a0a0a0f7;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
-            border: 0.11rem solid transparent;
           }
 
           .myDiv1:hover{
     color: red;
     transition: 0.35s linear;
-    border: 0.11rem solid rgba(169, 169, 169, 0.925);
     border-radius: 0.5rem;
     background-color: #f6f6f6;
           }
@@ -371,18 +364,16 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: #4f4f4fe6;
+            color: #a0a0a0f7;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
-            border: 0.11rem solid transparent;
             }
 
           .myDiv2:hover{
     color: red;
     transition: 0.35s linear;
-    border: 0.11rem solid rgba(169, 169, 169, 0.925);
     border-radius: 0.5rem;
     background-color: #f6f6f6;
           }
@@ -396,17 +387,16 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: #4f4f4fe6;
+            color: #a0a0a0f7;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
-            border: 0.11rem solid transparent;
-          }
+            }
+
           .myDivT:hover{
     color: red;
     transition: 0.35s linear;
-    border: 0.11rem solid rgba(169, 169, 169, 0.925);
     border-radius: 0.5rem;
     background-color: #f6f6f6;
           }
@@ -420,18 +410,16 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: #4f4f4fe6;
+            color: #a0a0a0f7;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
-            border: 0.11rem solid transparent;
-          }
+              }
 
           .Peinture:hover{
     color: red;
     transition: 0.35s linear;
-    border: 0.11rem solid rgba(169, 169, 169, 0.925);
     border-radius: 0.5rem;
     background-color: #f6f6f6;
           }
@@ -446,18 +434,16 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: #4f4f4fe6;
+            color: #a0a0a0f7;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
-            border: 0.11rem solid transparent;
-            }
+              }
 
           .myDiv6:hover{
     color: red;
     transition: 0.35s linear;
-    border: 0.11rem solid rgba(169, 169, 169, 0.925);
     border-radius: 0.5rem;
     background-color: #f6f6f6;
           }
