--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       align-items: center;
                 background: #000;
                  width: 100%;
-                 height: 63px;
+                 height: 64px;
                  object-fit: cover;
                  box-shadow: 0 -4.5px 2rem 4px #10affe2c;
                  position: sticky;
@@ -216,14 +216,13 @@
             font-family: 'Roboto Slab', serif;
             font-size: 17px;
             word-spacing: -1px;
-            height: 45px;    
+            height: 36px;    
 }
 
 .TYK1:hover{
-  color: red;
+  color: black;
     transition: 0.35s linear;
-    border-radius: 0.5rem;
-    background-color: #fdfdfd;
+    background-color: #ffffff;
 }
 
 .navbar0{
@@ -322,14 +321,13 @@
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
-            height: 45px;
+            height: 36px;  
           }
 
           .myDiv:hover{
-    color: red;
+    color: black;
     transition: 0.35s linear;
-    border-radius: 0.5rem;
-    background-color: #f6f6f6;
+    background-color: #fff;
           }
 
           .myDiv1{
@@ -338,7 +336,7 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: 45px;
+            height: 36px;  
             width: 100%;
             background: transparent;
             color: #a0a0a0f7;
@@ -349,10 +347,9 @@
           }
 
           .myDiv1:hover{
-    color: red;
+    color: black;
     transition: 0.35s linear;
-    border-radius: 0.5rem;
-    background-color: #f6f6f6;
+    background-color: #fff;
           }
 
           .myDiv2{
@@ -361,7 +358,7 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: 45px;
+            height: 36px;  
             width: 100%;
             background: transparent;
             color: #a0a0a0f7;
@@ -372,10 +369,9 @@
             }
 
           .myDiv2:hover{
-    color: red;
+    color: black;
     transition: 0.35s linear;
-    border-radius: 0.5rem;
-    background-color: #f6f6f6;
+    background-color: #fff;
           }
 
           .myDivT{
@@ -384,7 +380,7 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: 45px;
+            height: 36px;  
             width: 100%;
             background: transparent;
             color: #a0a0a0f7;
@@ -395,10 +391,9 @@
             }
 
           .myDivT:hover{
-    color: red;
+    color: black;
     transition: 0.35s linear;
-    border-radius: 0.5rem;
-    background-color: #f6f6f6;
+    background-color: #fff;
           }
 
           .Peinture{
@@ -407,7 +402,7 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: 45px;
+            height: 36px;  
             width: 100%;
             background: transparent;
             color: #a0a0a0f7;
@@ -418,10 +413,9 @@
               }
 
           .Peinture:hover{
-    color: red;
+    color: black;
     transition: 0.35s linear;
-    border-radius: 0.5rem;
-    background-color: #f6f6f6;
+    background-color: #fff;
           }
 
 
@@ -431,7 +425,7 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            height: 45px;
+            height: 36px;  
             width: 100%;
             background: transparent;
             color: #a0a0a0f7;
@@ -442,10 +436,9 @@
               }
 
           .myDiv6:hover{
-    color: red;
+    color: black;
     transition: 0.35s linear;
-    border-radius: 0.5rem;
-    background-color: #f6f6f6;
+    background-color: #fff;
           }
 
           
