--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: #000;
+      color: red;
     }
 
     .Calculator{
@@ -142,7 +142,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: #000;
+      color: red;
     }
     
     .dico{
@@ -164,7 +164,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: #000;
+      color: red;
     }
 
     .datime{
@@ -185,7 +185,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: #000;
+      color: red;
     }
     
     .navbar{
