--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                  width: 100%;
                  height: 64px;
                  object-fit: cover;
-                 box-shadow: 0 -4.5px 2rem 4px #10affe2c;
+                 box-shadow: 0 -4.5px 2rem 4px #10abfe20;
                  position: sticky;
                  top: 0;
                  z-index: 1;
@@ -222,6 +222,7 @@
 .TYK1:hover{
   color: black;
     transition: 0.35s linear;
+    border-radius: 2rem;
     background-color: #ffffff;
 }
 
@@ -327,6 +328,7 @@
           .myDiv:hover{
     color: black;
     transition: 0.35s linear;
+    border-radius: 2rem;
     background-color: #fff;
           }
 
@@ -349,6 +351,7 @@
           .myDiv1:hover{
     color: black;
     transition: 0.35s linear;
+    border-radius: 2rem;
     background-color: #fff;
           }
 
@@ -371,6 +374,7 @@
           .myDiv2:hover{
     color: black;
     transition: 0.35s linear;
+    border-radius: 2rem;
     background-color: #fff;
           }
 
@@ -393,6 +397,7 @@
           .myDivT:hover{
     color: black;
     transition: 0.35s linear;
+    border-radius: 2rem;
     background-color: #fff;
           }
 
@@ -415,6 +420,7 @@
           .Peinture:hover{
     color: black;
     transition: 0.35s linear;
+    border-radius: 2rem;
     background-color: #fff;
           }
 
@@ -438,6 +444,7 @@
           .myDiv6:hover{
     color: black;
     transition: 0.35s linear;
+    border-radius: 2rem;
     background-color: #fff;
           }
 
@@ -541,7 +548,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #dee4ff00;
+    background: #eaeeff00;
     width: 100%;
     height: auto;
     font-family: 'helvetica';
@@ -817,7 +824,7 @@ animation: auto 15s infinite linear;
 
 .k1{
     display: grid;
-    background: #3033f20a;
+    background: #3437f50d;
     justify-items: left;
     justify-content: center;
     text-align: justify;
