--- a/index.html
+++ b/index.html
@@ -824,16 +824,16 @@ animation: auto 15s infinite linear;
 
 .k1{
     display: grid;
-    background: #3437f50d;
+    background: transparent;
     justify-items: left;
     justify-content: center;
     text-align: justify;
     width: 74%;
     height: auto;
-    font-family: 'Roboto Slab', serif;
-    font-size: 1.25rem; 
+    line-height: 1.6;
+    font-family: 'Titillium Web', serif;
+    font-size: 1.15rem; 
     color:#252525f7;
-    line-height: 1.7;
     padding: 25px;
 }
 .k1 img{
@@ -947,10 +947,10 @@ height: auto;
     text-align: justify;
     width: 101%;
     height: auto;
-    font-family: 'Roboto Slab', serif;
-    font-size: 1.25rem; 
+     line-height: 1.6;
+     font-size: 1.15rem; 
+    font-family: 'Titillium Web', serif;
     color:#252525f7;
-    line-height: 1.7;
     padding: 14px;
 }
 
@@ -1214,11 +1214,11 @@ height: 220px;
 
 .TXT{
   width: 100%;
-  font-family: 'Roboto Slab', serif;
-  font-size: 1.25rem; 
-  color:#252525f7;
-  line-height: 1.7;
-  text-align: justify;
+   line-height: 1.6;
+   font-size: 1.15rem; 
+   font-family: 'Titillium Web', serif; 
+   color:#252525f7;
+   text-align: justify;
 }
 
 .HLTHY{
@@ -1231,10 +1231,11 @@ height: 220px;
     text-align: justify;
     width: 72.5%;
     height: auto;
-    font-family: 'Roboto Slab', serif;
-    font-size: 1.25rem; 
+    line-height: 1.6;
+    font-family: 'Titillium Web', serif;
     color:#252525f7;
     line-height: 1.7;
+    font-size: 1.15rem; 
     padding: 14px;
 }
 .HLTHY:hover{
@@ -1249,10 +1250,10 @@ height: 220px;
   justify-items: center;
   width: 100%;
   height: auto;
-  font-family: 'Roboto Slab', serif;
-  font-size: 1.25rem; 
+  line-height: 1.6;
+  font-size: 1.15rem; 
+  font-family: 'Titillium Web', serif;
   color:#252525f7;
-  line-height: 1.7;
 }
 
 .CHRZiniare {
@@ -1299,10 +1300,10 @@ transition: 0.26s linear;
   justify-items: center;
   width: 100%;
   height: auto;
-  font-family: 'Roboto Slab', serif;
-  font-size: 1.25rem; 
+  line-height: 1.6;
+  font-size: 1.15rem; 
+  font-family: 'Titillium Web', serif;
   color:#252525f7;
-  line-height: 1.7;
   border-top: 0.1rem solid #000;
   border-bottom: 0.1rem solid #000;
     
@@ -1328,10 +1329,10 @@ transition: 0.26s linear;
 }
 
 .Texo{
-  font-family: 'Roboto Slab', serif;
-  font-size: 1.25rem; 
+  line-height: 1.6;
+  font-size: 1.15rem; 
+  font-family: 'Titillium Web', serif; 
   color:#252525f7;
-  line-height: 1.7;
   text-align: justify;
 }
 
@@ -1343,10 +1344,10 @@ transition: 0.26s linear;
   background: #2c18e809;
   width: 74%;
   height: auto;
-  font-family: 'Roboto Slab', serif;
-  font-size: 1.25rem; 
+  line-height: 1.6;
+  font-size: 1.15rem; 
+  font-family: 'Titillium Web', serif;
   color:#252525f7;
-  line-height: 1.7;
   padding: 25px;
   border-bottom: 0.1rem solid #000;
 }
