--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: #edededf8;
+    background: #fffffff8;
     justify-content: center;
     align-items: center;
 }
@@ -548,7 +548,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #eaeeff00;
+    background: transparent;
     width: 100%;
     height: auto;
     font-family: 'helvetica';
