--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #000;
+                background: #000000f6;
                  width: 100%;
-                 height: 64px;
+                 height: 70px;
                  object-fit: cover;
-                 box-shadow: 0 -4.5px 2rem 4px #10abfe20;
+                 box-shadow: 0 -5px 2rem 4px #14141443;
                  position: sticky;
                  top: 0;
                  z-index: 1;
@@ -847,6 +847,10 @@ animation: auto 15s infinite linear;
   background: #fff;
 }
 
+.k1:hover{
+  background: #240fe209;
+}
+
 .Noel{
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
@@ -942,7 +946,7 @@ height: auto;
   width: 73%;
 }
 .Cartes:hover{
-  background: #2c18e809;
+  background: #240fe209;
 }
 .CRT1{
   display: grid;
