--- a/index.html
+++ b/index.html
@@ -217,18 +217,17 @@
             width: 100%;
             background: transparent;
             color: #bdbdbd;
-            padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 17px;
+            font-size: 18.5px;
             word-spacing: -1px;
             height: 36px;    
+            border-bottom: 0.15rem solid transparent;
 }
 
 .TYK1:hover{
-  color: black;
-    transition: 0.35s linear;
-    border-radius: 2rem;
-    background-color: #ffffff;
+   color: #fff;
+    transition: 0.16s ease;
+    border-bottom: 0.15rem solid #fff;
 }
 
 .navbar0{
@@ -322,18 +321,17 @@
             width: 100%;
             background: transparent;
             color: #bdbdbd;
-            padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
             height: 36px;  
+            border-bottom: 0.15rem solid transparent;
           }
 
           .myDiv:hover{
-    color: black;
-    transition: 0.35s linear;
-    border-radius: 2rem;
-    background-color: #fff;
+    color: #fff;
+    transition: 0.16s ease;
+    border-bottom: 0.15rem solid #fff;
           }
 
           .myDiv1{
@@ -346,17 +344,16 @@
             width: 100%;
             background: transparent;
             color: #bdbdbd;
-            padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border-bottom: 0.15rem solid transparent;
           }
 
           .myDiv1:hover{
-    color: black;
-    transition: 0.35s linear;
-    border-radius: 2rem;
-    background-color: #fff;
+    color: #fff;
+    transition: 0.16s ease;
+    border-bottom: 0.15rem solid #fff;
           }
 
           .myDiv2{
@@ -369,17 +366,16 @@
             width: 100%;
             background: transparent;
             color: #bdbdbd;
-            padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border-bottom: 0.15rem solid transparent;
             }
 
           .myDiv2:hover{
-    color: black;
-    transition: 0.35s linear;
-    border-radius: 2rem;
-    background-color: #fff;
+    color: #fff;
+    transition: 0.16s ease;
+    border-bottom: 0.15rem solid #fff;
           }
 
           .myDivT{
@@ -392,17 +388,16 @@
             width: 100%;
             background: transparent;
             color: #bdbdbd;
-            padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border-bottom: 0.15rem solid transparent;
             }
 
           .myDivT:hover{
-    color: black;
-    transition: 0.35s linear;
-    border-radius: 2rem;
-    background-color: #fff;
+    color: #fff;
+    transition: 0.16s ease;
+    border-bottom: 0.15rem solid #fff;
           }
 
           .Peinture{
@@ -415,17 +410,16 @@
             width: 100%;
             background: transparent;
             color: #bdbdbd;
-            padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border-bottom: 0.15rem solid transparent;
               }
 
           .Peinture:hover{
-    color: black;
-    transition: 0.35s linear;
-    border-radius: 2rem;
-    background-color: #fff;
+    color: #fff;
+    transition: 0.16s ease;
+    border-bottom: 0.15rem solid #fff;
           }
 
 
@@ -439,17 +433,16 @@
             width: 100%;
             background: transparent;
             color: #bdbdbd;
-            padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border-bottom: 0.15rem solid transparent;
               }
 
           .myDiv6:hover{
-    color: black;
-    transition: 0.35s linear;
-    border-radius: 2rem;
-    background-color: #fff;
+    color: #fff;
+    transition: 0.16s ease;
+    border-bottom: 0.15rem solid #fff;
           }
 
           
