--- a/index.html
+++ b/index.html
@@ -888,10 +888,9 @@ animation: auto 15s infinite linear;
   width: 100%;
   height: auto;
   font-family: 'Titillium Web', sans-serif;
-  font-size: 17.49px;
   color:rgba(28, 28, 28, 0.95);
-  font-size: 1.05rem;
-  line-height: 1.5; 
+  font-size: 1.03rem;
+  line-height: 1.57; 
   text-align: left;
   background:rgba(14, 36, 149, 0);
   padding: 15px;
@@ -2571,8 +2570,8 @@ que les gouvernements font peu de choses pour aider financièrement les personne
                 <div class="kpt">
                 
                     <p>
-                     La vision de Tiki N'Yiki a pour promoteur Gabriel, une personne à mobilité réduite. 
-                     Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> 
+                     La vision de Tiki N'Yiki a pour promoteur Gabriel, personne à mobilité réduite ayant 
+                     étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> 
                      et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> 
                      de <a href="https://mairie-ouaga.bf/accueil" target="_blank"> Ouagadougou</a> 
                      au pays des hommes intègres, le <a href="https://www.ontb.bf/" target="_blank">Burkina Faso.</a>
