--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
             grid-template-rows: 1fr;
             justify-content: center; 
             justify-items: center;
-            color: rgba(91, 12, 17, 0.989);
+            color: rgba(99, 14, 19, 0.989);
             font-family: 'Tektur', cursive;
-            font-size: 1.078rem;
+            font-size: 1.08rem;
             text-align: left;
-            line-height: 23px;
-           
+            line-height: 22.5px;
+            margin-top: 0.1rem;
             width: 80%;
           }
 
