--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         flex-direction: column;
         align-items: center;  
         text-align: center; 
-        border-top: 0.45rem solid gold;   
+        border-top: 0.4rem solid rgb(10, 127, 237);   
     }
 
  h2{
@@ -1850,15 +1850,15 @@ function myFunction() {
    <br>
    <br> 
    Bien que son économie soit fortement impactée par des crises politiques, sécuritaires, humanitaires et alimentaires qui sécouent la sous-région y compris le Mali et le Niger, le peuple Burkinabè reste toujours dynamique et fier. Avec une jeunesse de plus en plus entreprenante,
-le Burkina Faso dans son emsemble avance vers une certaine autonomie de vie, un changement des conditions sociales.
+le Burkina Faso dans son ensemble avance vers une certaine autonomie de vie, un changement des conditions sociales.
    <br> 
    <br>
-   Par contre malgré une population de plus de 3 226 627 de personnes handicapées  <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Titillium web', sans-serif; line-height: 22px;" target="_blank">[Sources: African Disability Rights - Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est généralement causé soit par la Polio (poliomyétlie), soit par d'autres maladies, soit par la vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, rejéttées et donc souvent livrées à elles-mêmes. 
+   Par contre avec une population d'au moins 3 226 627 de personnes handicapées  <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Titillium web', sans-serif; line-height: 22px;" target="_blank">[Sources: African Disability Rights - Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est généralement causé soit par la Polio (poliomyétlie), soit par d'autres maladies, soit par la vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, rejéttées et donc souvent livrées à elles-mêmes. 
    <br> 
    <br> 
-   Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
-   mais aussi par une insuffisance de légifération et une mise en application des lois par rapport au handicap, les droits et les devoirs corollaires. 
-  Et cela rend très difficile la vie des personnes handicapées qui doivent perpétuellement lutter pour avoir quelques droits basiques.  
+   Ceci n'est pas seulement causé par une culture toxique avec les discriminations et barrières sociales,
+   mais en plus par une insuffisance de légifération adéquate et une mise en application des lois par rapport au handicap, les droits et les devoirs corollaires. 
+  Ce manque de rigueur législatif et pratique rend très difficile la vie de nombreuses personnes à mobilité réduite qui doivent perpétuellement lutter pour bénéficier de quelques droits basiques.  
 </p>
    </div>
 
@@ -1867,7 +1867,7 @@ le Burkina Faso dans son emsemble avance vers une certaine autonomie de vie, un 
         <div class="k1">
 
           <div style="width: 100%; height: auto; margin-top: -2rem;">
-        <p> Naturellement tant qu'il n'y aura pas plus d'acceptation et d'inclusion sociale de la différence, cette lutte ne cessera pas. Pour ces personnes différentes c'est une question de revendication juste de leurs droits pour mieux vivre malgré la différence.
+        <p> Naturellement tant qu'il n'y aura pas plus d'acceptation, plus d'inclusion sociale des personnes différentes, cette lutte ne cessera pas car c'est une question de revendication juste de leurs droits.
          
          <br>
          En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe. 
