--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: #b6b6b6;
+            color: #d1d1d1;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -329,7 +329,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: #b6b6b6;
+            color: #d1d1d1;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -352,7 +352,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #b6b6b6;
+            color: #d1d1d1;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -374,7 +374,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #b6b6b6;
+            color: #d1d1d1;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -396,7 +396,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #b6b6b6;
+            color: #d1d1d1;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -418,7 +418,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #b6b6b6;
+            color: #d1d1d1;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -441,7 +441,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #b6b6b6;
+            color: #d1d1d1;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
