--- a/index.html
+++ b/index.html
@@ -2310,7 +2310,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
         </span>
         <br><br>
           
-      <b style="color:rgba(8, 32, 81, 0.983); font-size: 14px;">"La faim justifie les moyens, mais on a rarement les moyens quand on a faim" [ Dictionnaire des idées revues * Jacques Sternberg ]</b> 
+      <b style="color:rgb(7, 188, 7); font-size: 14px;">"La faim justifie les moyens, mais on a rarement les moyens quand on a faim" [ Dictionnaire des idées revues * Jacques Sternberg ]</b> 
       <br>
       <br>
     <p> Il n'y a aucun doute que quand les un-es mangent à leur faim, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. En 2023 près de 783 millions de personnes de la population globale ne sont pas sûres de pouvoir s'assurer un repas quotidien. <a href="https://www.wfp.org/global-hunger-crisis" style="font-family: 'Titillium Web', sans sherif; "target="_blank">[Sources: P.A.M (Programme Alimentaire Mondial)]</a>
