--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #000;
+                background: #fefefe;
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
-                 box-shadow: 0 -5px 2rem 4px #3a3a3a51;
+                 box-shadow: 0 -5px 1.65rem 5px #8b8b8b51;
                  position: sticky;
                  top: 0;
                  z-index: 1;
@@ -225,7 +225,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: #d1d1d1;
+            color: #8f8f8f;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -234,9 +234,9 @@
 }
 
 .TYK1:hover{
-   color: #fff;
+   color: #000;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #fff;
+    border-bottom: 0.14rem solid #000;
 }
 
 .navbar0{
@@ -329,7 +329,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: #d1d1d1;
+            color: #8f8f8f;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -338,9 +338,9 @@
           }
 
           .myDiv:hover{
-    color: #fff;
+    color: #000;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #fff;
+    border-bottom: 0.14rem solid #000;
           }
 
           .myDiv1{
@@ -352,7 +352,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #d1d1d1;
+            color: #8f8f8f;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -360,9 +360,9 @@
           }
 
           .myDiv1:hover{
-    color: #fff;
+    color: #000;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #fff;
+    border-bottom: 0.14rem solid #000;
           }
 
           .myDiv2{
@@ -374,7 +374,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #d1d1d1;
+            color: #8f8f8f;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -382,9 +382,9 @@
             }
 
           .myDiv2:hover{
-    color: #fff;
+    color: #000;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #fff;
+    border-bottom: 0.14rem solid #000;
           }
 
           .myDivT{
@@ -396,7 +396,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #d1d1d1;
+            color: #8f8f8f;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -404,9 +404,9 @@
             }
 
           .myDivT:hover{
-    color: #fff;
+    color: #000;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #fff;
+    border-bottom: 0.14rem solid #000;
           }
 
           .Peinture{
@@ -418,7 +418,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #d1d1d1;
+            color: #8f8f8f;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -426,9 +426,9 @@
               }
 
           .Peinture:hover{
-    color: #fff;
+    color: #000;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #fff;
+    border-bottom: 0.14rem solid #000;
           }
 
 
@@ -441,7 +441,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #d1d1d1;
+            color: #8f8f8f;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -449,9 +449,9 @@
               }
 
           .myDiv6:hover{
-    color: #fff;
+    color: #000;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #fff;
+    border-bottom: 0.14rem solid #000;
           }
 
           
