--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
-                 box-shadow: 0 -5px 1.65rem 5px #8b8b8b51;
+                 box-shadow: 0 -5px 1.6rem 5px #90909049;
                  position: sticky;
                  top: 0;
                  z-index: 1;
@@ -246,9 +246,9 @@
             justify-items: center;
             column-gap: 0.5rem;
             width: 100%; 
-            height: 110px; 
-            background: transparent;
-            box-shadow: 0 -5px 1rem 2px #8a8a8a26;
+            height: 106px; 
+            background: rgba(173, 216, 230, 0.966);
+            box-shadow: 0 -5px 0.5rem 2px #9e9e9e26;
           }
 
           .BIENVENUE{
