--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   font-family: 'Tektur', cursive;
   font-family: 'Titillium Web', sans-serif;
   font-size: 13px; 
-  color: rgba(0, 128, 0, 0.944);
+  color: yellow;
   padding: 5px;
   margin-top: -1.3rem;
 }
@@ -247,7 +247,7 @@
             column-gap: 0.5rem;
             width: 100%; 
             height: 106px; 
-            background: rgba(173, 216, 230, 0.966);
+            background: rgb(24, 77, 130);
             box-shadow: 0 -5px 0.5rem 2px #9e9e9e26;
           }
 
@@ -256,12 +256,12 @@
             grid-template-rows: 1fr;
             justify-content: center; 
             justify-items: center;
-            color: rgba(99, 14, 19, 0.989);
+            color: #fff;
             font-family: 'Exo 2', sans-serif;
             font-size: 1.08rem;
             text-align: left;
             line-height: 22.5px;
-            margin-top: 0.2rem;
+            margin-top: 0.4rem;
             width: 80%;
           }
 
@@ -1620,7 +1620,7 @@ function myFunction() {
   <p>Bienvenue sur ce site internet en développement ! Cette page internet est sommairement descriptive du contenu du site.
   Certaines photos, favicons et certains liens hypertextes sont temporaires.
 <br>
-<b style="color: rgba(48, 48, 48, 0.907);">Merci pour votre compréhension ! Bonne Visite !
+<b style="color: #fff;">Merci pour votre compréhension ! Bonne Visite !
 </b>
 </p>
 </div>
