--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
   width: 97%;
   font-family: 'Tektur', cursive;
   font-family: 'Titillium Web', sans-serif;
-  font-size: 13px; 
-  color: yellow;
+  font-size: 12px; 
+  color: #fff;
   padding: 5px;
   margin-top: -1.3rem;
 }
@@ -246,7 +246,7 @@
             justify-items: center;
             column-gap: 0.5rem;
             width: 100%; 
-            height: 106px; 
+            height: 108px; 
             background: rgb(26, 82, 139);
             box-shadow: 0 -3px 0.25rem 2px #d7d7d726;
           }
@@ -260,8 +260,8 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 1.08rem;
             text-align: left;
-            line-height: 22.5px;
-            margin-top: 0.4rem;
+            line-height: 22px;
+            margin-top: 0.45rem;
             width: 80%;
           }
 
