--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #fefefe;
+                background: #ffffff;
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
-                 box-shadow: 0 -5px 1.6rem 5px #90909049;
+                 box-shadow: 0 -5px 1.6rem 5px #9d9d9d49;
                  position: sticky;
                  top: 0;
                  z-index: 1;
@@ -247,8 +247,8 @@
             column-gap: 0.5rem;
             width: 100%; 
             height: 108px; 
-            background: rgb(26, 82, 139);
-            box-shadow: 0 -3px 0.25rem 2px #d7d7d726;
+            background: rgb(28, 93, 169);
+            box-shadow: 0 -3px 0.25rem 1px #ebebeb10;
           }
 
           .BIENVENUE{
@@ -297,7 +297,7 @@
           font-family: 'Tektur', cursive;
           font-family: 'Titillium Web', sans-serif;
           cursor: pointer;
-          border-top: 0.49rem solid #ededed;
+          border-top: 0.49rem solid #0491fd;
           border-right: 0.15rem solid rgba(92, 170, 248, 0.097);
           border-left: 0.15rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
