--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@
     }
 
     .Translator:hover{
-      transition: 0.3s ease-in;
       width: 100%;
       height: auto;
       color: red;
+      text-decoration: underline;
+      transition: 0.2s ease-in;
     }
 
     .Calculator{
@@ -153,7 +154,8 @@
     }
 
     .Calculator:hover{
-      transition: 0.3s ease-in;
+      text-decoration: underline;
+      transition: 0.2s ease-in;
       width: 100%;
       height: auto;
       color: red;
@@ -175,7 +177,8 @@
     }
 
     .dico:hover{
-      transition: 0.3s ease-in;
+      text-decoration: underline;
+      transition: 0.2s ease-in;
       width: 100%;
       height: auto;
       color: red;
@@ -196,7 +199,8 @@
     }
 
     .datime:hover{
-      transition: 0.3s ease-in;
+      text-decoration: underline;
+      transition: 0.2s ease-in;
       width: 100%;
       height: auto;
       color: red;
@@ -210,7 +214,8 @@
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
-                 box-shadow: 0 -5px 1.6rem 5px #9d9d9d49;
+                 border-bottom: 0.12rem solid rgba(209, 209, 209, 0.705);
+                 box-shadow: 0 -3px 1.7rem 5px rgba(31, 115, 184, 0.189);
                  position: sticky;
                  top: 0;
                  z-index: 1;
@@ -247,7 +252,7 @@
             column-gap: 0.5rem;
             width: 100%; 
             height: 108px; 
-            background: rgb(28, 93, 169);
+            background: rgb(31, 115, 184);
             box-shadow: 0 -3px 0.25rem 1px #ebebeb10;
           }
 
@@ -297,12 +302,17 @@
           font-family: 'Tektur', cursive;
           font-family: 'Titillium Web', sans-serif;
           cursor: pointer;
-          border-top: 0.49rem solid #0491fd;
+          border-top: 0.49rem solid #1eb4ff;
           border-right: 0.15rem solid rgba(92, 170, 248, 0.097);
           border-left: 0.15rem solid rgba(92, 170, 248, 0.097);
-          border-bottom-left-radius: 30rem;
-          border-bottom-right-radius: 30rem;
-          background: -webkit-linear-gradient( orangered 0%,#fff 100%);
+          border-right: 0.15rem solid transparent;
+          border-left: 0.15rem solid transparent;
+          border-radius: 50%;
+          color: #fff;
+          box-shadow: 0.1px 0.1px 1rem 0 #3b3b3bae;
+          font-size: 0.9rem;
+          padding: 5px;
+          background: -webkit-linear-gradient(#838383,#2b2b2bfc);
           box-shadow: 1.3px 1.2px 0.5rem 0 #a0a0a0dc;
           word-spacing: -1px;
          }
