--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
-                 border-bottom: 0.12rem solid rgba(209, 209, 209, 0.705);
+                 border-bottom: 0.12rem solid rgba(205, 205, 205, 0.675);
                  box-shadow: 0 -3px 1.7rem 5px rgba(31, 115, 184, 0.189);
                  position: sticky;
                  top: 0;
@@ -230,7 +230,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: #8f8f8f;
+            color: #717171;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -339,7 +339,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: #8f8f8f;
+            color: #717171;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -362,7 +362,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #8f8f8f;
+            color: #717171;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -384,7 +384,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #8f8f8f;
+            color: #717171;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -406,7 +406,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #8f8f8f;
+            color: #717171;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -428,7 +428,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #8f8f8f;
+            color: #717171;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
@@ -451,7 +451,7 @@
             height: 36px;  
             width: 100%;
             background: transparent;
-            color: #8f8f8f;
+            color: #717171;
             font-family: 'Exo 2', sans-serif;
             font-size: 19px;
             word-spacing: -1px;
