--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 }
 
 .TYK1:hover{
-   color: #000;
+   color: #1aaafd;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #000;
+    border-bottom: 0.14rem solid red;
 }
 
 .navbar0{
@@ -348,9 +348,9 @@
           }
 
           .myDiv:hover{
-    color: #000;
+    color: #1aaafd;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #000;
+    border-bottom: 0.14rem solid red;
           }
 
           .myDiv1{
@@ -370,9 +370,9 @@
           }
 
           .myDiv1:hover{
-    color: #000;
+    color: #1aaafd;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #000;
+    border-bottom: 0.14rem solid red;
           }
 
           .myDiv2{
@@ -392,9 +392,9 @@
             }
 
           .myDiv2:hover{
-    color: #000;
+    color: #1aaafd;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #000;
+    border-bottom: 0.14rem solid red;
           }
 
           .myDivT{
@@ -414,9 +414,9 @@
             }
 
           .myDivT:hover{
-    color: #000;
+    color: #1aaafd;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #000;
+    border-bottom: 0.14rem solid red;
           }
 
           .Peinture{
@@ -436,9 +436,9 @@
               }
 
           .Peinture:hover{
-    color: #000;
+    color: #1aaafd;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #000;
+    border-bottom: 0.14rem solid red;
           }
 
 
@@ -459,9 +459,9 @@
               }
 
           .myDiv6:hover{
-    color: #000;
+    color: #1aaafd;
     transition: 0.2s ease;
-    border-bottom: 0.14rem solid #000;
+    border-bottom: 0.14rem solid red;
           }
 
           
