--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@ function myFunction() {
 
 <div class="navbar0"> 
 
-  <a href="https://gorampe.com/vivre-en-fauteuil-roulant-7-mythes-et-realites/" target="_blank">
+  <a href="https://gorampe.com/the-myths-and-realities-of-life-in-a-wheelchair/?lang=en" target="_blank">
     
     <div class="DAH"> 
 
