--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tiki N'Yiki Vision">
-    <meta name="keywords" content="Tiki-N'Yiki,culture,Disability,disabled-person,social-bareers-more-encountered-by-disabled-in-burkina-faso,challenges-of-disabled-people-in-Africa,connect-diabled-people-associations-of-burkina-faso-to-North-American-ones,disability,inclusion,photography">
+    <meta name="keywords" content="Tiki-N'Yiki,disability,disabled-kids,social-bareers-more-to-disabled-people-in-burkina-faso,challenges-of-disabled-people-in-Burkina-Faso-and-in-Africa,connect-diabled-people-organisations-of-burkina-faso-to-North-American-ones,inclusion,food-security,health-care,climate-change,photography,solidarity-for-well-being">
     <meta name="twitter:card" content="summary">
     <meta property="og:site_name" content="saxiwama">
     <meta property="og:title" content="saxiwama">
