--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
-                 border-bottom: 0.12rem solid rgba(205, 205, 205, 0.675);
+                 border-bottom: 2px solid rgba(212, 212, 212, 0.699);
                  box-shadow: 0 -3px 1.7rem 5px rgba(31, 115, 184, 0.189);
                  position: sticky;
                  top: 0;
@@ -252,8 +252,7 @@
             column-gap: 0.5rem;
             width: 100%; 
             height: 110px; 
-            background: rgb(38, 70, 122);
-            box-shadow: 0 -3px 0.25rem 1px #ebebeb10;
+            background: rgb(27, 56, 103);
           }
 
           .BIENVENUE{
