--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             column-gap: 0.5rem;
             width: 100%; 
             height: 110px; 
-            background: rgb(27, 56, 103);
+            background: rgb(26, 55, 103);
           }
 
           .BIENVENUE{
@@ -488,7 +488,7 @@
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
-        background: -webkit-linear-gradient(rgb(32, 32, 32), rgba(42, 42, 42, 0.852));
+        background: rgba(34, 124, 208, 0.946);
         background-size: cover;
         object-fit:cover;
         color: #fff;
@@ -496,7 +496,6 @@
         flex-direction: column;
         align-items: center;  
         text-align: center; 
-        border-top: 0.4rem solid rgb(10, 127, 237);   
     }
 
  h2{
