--- a/index.html
+++ b/index.html
@@ -1858,13 +1858,12 @@ function myFunction() {
    <br>
    <br> 
    Bien que son économie soit fortement impactée par des crises politiques, sécuritaires, humanitaires et alimentaires qui sécouent la sous-région y compris le Mali et le Niger, le peuple Burkinabè reste toujours debout, dynamique et fier pour relever les défis. Avec une jeune population entreprenante, le Burkina Faso avance vers un développement qui se veut profitable à tous les Burkinabè. 
-le Burkina Faso dans son ensemble avance vers une certaine autonomie de vie, un changement des conditions sociales.
    <br> 
    <br>
    Par contre malgré une population d'au moins 3 226 627 de personnes handicapées, non négligeable,  <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Titillium web', sans-serif; line-height: 22px;" target="_blank">[Sources: African Disability Rights - Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont les handicaps sont généralement causés soit par la Polio (poliomyélite), soit par d'autres sortes de maladies, soit par la vieillesse et/ou soit accidentellement, il est malheureusement encore fréquent de constater que de nombreuses personnes handicapées sont sous-estimées, négligées, rejéttées et souvent livrées à elles-mêmes au sein de leurs communautés. 
    <br> 
    <br> 
-   Au délà d'une culture toxique de discriminations et barrières sociales,il y a une insuffisance de légifération et une application adéquate des lois au bénéfice des personnes à mobilité réduite y compris leurs droits et devoirs corollaires. 
+   Au délà d'une culture toxique de discriminations et barrières sociales, il y a une insuffisance de légifération et une application inadéquate des textes en vigueur au bénéfice des personnes à mobilité réduite notament leurs droits et devoirs corollaires. 
   Ce manque de rigueur législatif et pratique rend très difficile la vie de nombreuses personnes à mobilité réduite qui doivent perpétuellement lutter pour bénéficier de quelques droits basiques.  
 </p>
    </div>
