--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tiki N'Yiki Vision">
-    <meta name="keywords" content="Tiki-N'Yiki,disability,disabled-kids,social-bareers-more-to-disabled-people-in-burkina-faso,challenges-of-disabled-people-in-Burkina-Faso-and-in-Africa,connect-diabled-people-organisations-of-burkina-faso-to-North-American-ones,inclusion,food-security,health-care,climate-change,photography,solidarity-for-well-being">
+    <meta name="keywords" content="Tiki-N'Yiki,disability,disabled-kids,social-bareers,disabled-people-in-burkina-faso,challenges-of-disabled-people-in-Burkina-Faso-and-in-Africa,connect-diabled-people-organisations-of-burkina-faso-to-North-American-ones,inclusion,food-security,health-care,climate-change,photography,solidarity-for-well-being">
     <meta name="twitter:card" content="summary">
-    <meta property="og:site_name" content="saxiwama">
-    <meta property="og:title" content="saxiwama">
+    <meta property="og:site_name" content="#">
+    <meta property="og:title" content="#">
     <meta property="og:type" content="website">
     <meta property="og:url" content="#">
     <meta property="og:image" content="#">
@@ -18,7 +18,7 @@
     <meta property="og:image:height" content="160px">
     <meta property="og:description" content=" Education,food-security,healthcare-issues,culture-and-mentalities-of-burkina-faso,photography,Disability,movies,networking,inclusion,disabled-photographer">
     <meta property="og:determiner" content="auto">
-    <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/49/p7y3.jpg?cities">
+    <meta property="og:image:secure_url" content="#">
     <meta property="og:locale" content="EN_CA">
     <meta property="og:locale:alternate" content="FR_CA">
     <link rel="stylesheets" type="text/css" href="_css/style.css_" media="all">
@@ -215,12 +215,11 @@
                  height: 75px;
                  object-fit: cover;
                  border-bottom: 2px solid rgba(212, 212, 212, 0.699);
-                 box-shadow: 0 -3px 1.7rem 5px rgba(34, 128, 205, 0.189);
+                 box-shadow: 0 -3px 1.7rem 5px rgba(36, 135, 216, 0.189);
                  position: sticky;
                  top: 0;
                  z-index: 1;
           }
-          
           
           .TYK1{
             display: flex;
