--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@ position: relative;
   justify-items: center;
   background: transparent;
   width: 72%;
-  height: 516;
+  height: 516px;
   border: 0.11rem solid rgba(203, 203, 203, 0.876); 
   margin-top: 0.5rem;
   padding: 4px;
@@ -1889,7 +1889,7 @@ function myFunction() {
 Tiki N'Yiki veut changer les mentalitées, contribuer à faire tomber les barrières sociales afin que toute personne handicapée puisse être mieux inclue, jouir totalement de ses droits et être respectée dans sa communauté. Ce processus sera progressif et positif mais contribuera en plus à amoindrir les discriminations quotidiennes et la peur vis-à-vis des personnes à mobilité réduite.
 <br>
 <br>
-<em style="font-family:'Titillium web', sans sherif; color :rgba(255, 1, 1, 0.996); font-size: 19.9px;">Normalement les personnes handicapées doivent être mieux promues, soutenues afin qu'elles aient des opportunités qui sont les leurs.</em>
+<em style="font-family:'Titillium web', sans sherif; color :rgb(255, 37, 37); font-size: 18px;">Normalement les personnes handicapées doivent être mieux promues, soutenues afin qu'elles aient des opportunités.</em>
         </p>
       </div> 
 
