--- a/index.html
+++ b/index.html
@@ -2587,9 +2587,9 @@ que les gouvernements font peu de choses pour aider financièrement les personne
                      au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> 
                      puis au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> 
                      de <a href="https://mairie-ouaga.bf/accueil" target="_blank"> Ouagadougou</a> 
-                     au <a href="https://www.ontb.bf/" target="_blank">Burkina Faso.</a> Il a un Brevet d'Etude du Premier Cycle (B.E.P.C)
+                     au <a href="https://www.ontb.bf/" target="_blank">Burkina Faso</a> et detient un Brevet d'Etude du Premier Cycle (B.E.P.C)
                     
-                     Fervent défenseur des droits des personnes handicapées, Gabriel s'est engagé dans plusieurs associations dans le domaine de l'éducation,
+                     Fervent défenseur des droits des personnes handicapées, Gabriel s'est engagé dans plusieurs associations dans le cadre de l'éducation,
                        la promotion et la défense des personnes à mobilité réduite particulièrement les enfants à mobilité réduites. 
               
                       </p>
