--- a/index.html
+++ b/index.html
@@ -1847,12 +1847,12 @@ function myFunction() {
         <p>Le Burkina Faso ou pays des hommes intègres est un pays sahélien indépendant le 5 août 1960 de la France. Il est enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de :
 
    <em><b>274.220 kilomètres carrés </b><a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" style="font-size: 18px; font-family: 'Titillium Web', sans sherif; line-height: 22px;" target="_blank">[Sources: Banque Mondiale] </a>avec une population approximative de <b>
-    de vingt trois millions trois cents quatre vingt dix neuf mille deux cents soixante treize (23 399 273) habitants. </b><a href="https://www.worldometers.info/world-population/burkina-faso-population/" style="font-size: 16px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Titillium web', sans-serif; line-height: 22px;" target="_blank"> [Sources: worldometer]</a> </em> 
-     
-   Sa capitale est Ouagadougou. Les habitants du Burkina Faso sont appélés des Burkinabè ou des Burkinabé. 
+   vingt trois millions deux cents cinquante un mille quatre cent quatre vingt cinq (23 251 485) habitants mais continue de s'agrandir rapidement. </b><a href="https://www.worldometers.info/world-population/burkina-faso-population/" style="font-size: 16px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Titillium web', sans-serif; line-height: 22px;" target="_blank"> [Sources: worldometer].</a> </em> 
+    <br> 
+   Sa capitale est <b>Ouagadougou</b>. Les habitants du Burkina Faso sont appélés des <b>Burkinabè ou des Burkinabé</b>. 
    <br>
    <br>
-   Le Burkina Faso partage des frontières communes au Nord-Ouest par le Mali, au Nord-Est par le Niger, au Sud-Est par le Bénin et au Sud par la Côte-d'Ivoire, le Ghana et le Togo.
+   Le Burkina Faso partage des frontières communes au Nord-Ouest par le <b>Mali</b>, au Nord-Est par le <b>Niger</b>, au Sud-Est par le <b>Bénin</b> et au Sud par la <b>Côte-d'Ivoire</b>, le <b>Ghana</b> et le <b>Togo</b>.
    Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, l'économie du Burkina Faso repose en grande partie sur l'agriculture, l'élévage et le maraîchage
    mais se diversifie de plus en plus à travers des secteurs comme les services et les nouvelles technologies qui créent des emplois.  
    <br>
@@ -1895,7 +1895,7 @@ ses droits et être respectée dans sa communauté. Ce processus sera progressif
 <em style="font-family:'Titillium web', sans sherif; color :rgb(255, 37, 37); font-size: 18px;">Normalement les personnes handicapées doivent être mieux promues, soutenues afin qu'elles aient des opportunités.</em>
         </p>
       </div> 
-
+      <br>
       <div class="K1" style="display: grid; grid-template-columns: 1.65fr 0.45fr; column-gap: 0.25rem; width: 100%; height: 51%;" >
      
         <a href="https://fr.wikipedia.org/wiki/Djemb%C3%A9" target="_blank">   
