--- a/index.html
+++ b/index.html
@@ -2337,10 +2337,10 @@ que les gouvernements font peu de choses pour aider financièrement les personne
           Quant aux étudiant-es handicapées un soutien leur sera offert afin les permettre de continuer leurs études.  
           <br>
           <br>
-          1. La première approche serait d'apporter un soutien alimentaire et immédiat ou une aide financière pour des vivres aux élèves et étudiant-es handicapé-es. 
+        <b style="color: red">1.</b> La première approche serait d'apporter un soutien alimentaire et immédiat ou une aide financière pour des vivres aux élèves et étudiant-es handicapé-es. 
           <br>
           <br>
-          2. La deuxième approche serait de sensibiliser l'opinion publique [Hommes, Femmes, Enfants, Jeunes, Personnes Agées] sur les défis liés à l'insécurité alimentaire, comment et pourquoi il est important d'avoir une sécurité alimentaire totale.
+          <b style="color: red">2.</b> La deuxième approche serait de sensibiliser l'opinion publique [Hommes, Femmes, Enfants, Jeunes, Personnes Agées] sur les défis liés à l'insécurité alimentaire, comment et pourquoi il est important d'avoir une sécurité alimentaire totale.
           
           <a href="https://fr.wikipedia.org/wiki/Agriculture_en_Isra%C3%ABl" target="_blank">
             <b style="color: #017ffe; font-family: 'Titillium Web', sans sherif; font-size: 18px;">
@@ -2349,8 +2349,8 @@ que les gouvernements font peu de choses pour aider financièrement les personne
           </a>
           <br>
           <br>
-          3. La troisième approche serait d'intégrer (associer) des nouveaux moyens de technologiques dans les divers processus de production agricole. Désormais les producteurs doivent de plus en plus intégrer et 
-          utiliser les applications technologiques qui vont les assister à mieux analyser, prévoir, décéler, réguler, contrôler, corriger, optimiser leurs productions gagner en temps, en qualité et en quantité 
+          <b style="color: red">3.</b> La troisième approche serait d'intégrer (associer) les nouveaux moyens technologiques dans les différents processus de production agricole pour les améliorer. Désormais les producteurs agricoles doivent de plus en plus intégrer et 
+          utiliser des applications technologiques pour permettre de mieux analyser, prévoir, décéler, réguler, contrôler, corriger, optimiser leurs productions gagner en temps, en qualité et en quantité 
           tout en respectant la nature.
         </p>
         </div>
